# cpp-calculator

./: .gitignore  CMakeLists.txt  README.md
include/: calculator.h
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
